<resources>
    <string name="app_name">AndroidQuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_the_game">Start the game</string>
    <string name="about_text">Here is an app which can help you to practice your Android and Kotlin skills. It\'s first version, where only tests with one version available.\n \nIn the future, multi-optional tests and graphic connection tests will be added.</string>
    <string name="about_explanation">You can go back to the title screen by pressing the button below or tapping on the back button. On the title screen you can start testing your skills.</string>
    <string name="back_to_title_button_text">Back to Title</string>
    <string name="read_the_rules">Read the Rules</string>
    <string name="read_about_the_app">Read about the App</string>
    <string name="welcome_text">Welcome to the Android Quiz App. Here you can test your knowledge of Android and Kotlin. The amount of questions is dynamic, but at least 5. Passing this test, you can be sure that you know basics of Android Developement.</string>
    <string name="the_image">the image</string>
    <string name="rules_text_first">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.</string>
    <string name="rules_text_second">If you get the 80\u0025 of the answers wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="question_number_now_and_total">Question: %1$s / %2$s</string>
    <string name="congrats_text">Nice run! You scored %1$s points! It\'s %2$s of possible result!</string>
    <string name="congrats_not_perfect">It\'s not perfect, but you can improve your results. Just keep studying and you will become better and better!</string>
    <string name="current_score">Score: %d</string>
    <string name="end_game_text">You\'ve lost! You\'ve chosen less than 80\u0025 of correct answers. \n Or may be you have canceled \n the game(tapped the \"END GAME\" button). \n\n You can start a new game by pressing the button below.\n Or you can go back to the title screen.</string>
</resources>