<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        tools:context=".ui.AboutFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toTopOf="@id/back_to_title_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13">

                <TextView
                    android:id="@+id/about_text_view_general"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/about_text"
                    android:textSize="18sp"
                    app:layout_constraintVertical_bias="0.110000014" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toTopOf="@id/back_to_title_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_general">

                <TextView
                    android:id="@+id/about_text_view_explanation"
                    style="@style/TextViewHeaderStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/about_explanation"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/back_to_title_button"
                style="@style/roundedButtonBig"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey"
                android:text="@string/back_to_title_button_text"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.94" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_general"
                app:layout_constraintVertical_bias="0.52"
                app:srcCompat="@drawable/ic_outline_cruelty_free_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>